<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:scrollHorizontally="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_gray_main" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_bg"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:scrollHorizontally="true"
                android:textColor="@color/white"
                android:textColorHint="@color/text_gray_main" />

            <View
                android:id="@+id/password_hider"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_alignRight="@id/password"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:visibility="gone" />

        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/red_button_selector"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or"
            android:textColor="@color/text_gray1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <View
            android:id="@+id/underline"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/white" />

    </LinearLayout>

</LinearLayout>