<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="48dp"
    android:paddingLeft="48dp"
    android:background="@drawable/dialog_inset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="32dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/text_gray_main" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_step"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/line_view" />

    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:inputType="textCapSentences"
        android:textColor="@color/white"
        android:textColorHint="@color/text_gray_main"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/step_description"/>

    <Button
        android:id="@+id/add_step"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/red_button_selector"
        android:textColor="@color/white"
        android:text="@string/add_button"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>