<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_bg"
                android:drawableEnd="@drawable/ic_email"
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:scrollHorizontally="true"
                android:textColor="@color/white"
                android:textColorHint="@color/text_gray_main" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_bg"
                android:drawableEnd="@drawable/ic_username"
                android:drawableRight="@drawable/ic_username"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:scrollHorizontally="true"
                android:textColor="@color/white"
                android:textColorHint="@color/text_gray_main" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableEnd="@drawable/ic_password"
                    android:drawableRight="@drawable/ic_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_gray_main" />

                <View
                    android:id="@+id/v_password_hider1"
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_alignRight="@id/password"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:visibility="gone" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/password_again"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/edit_text_bg"
                    android:drawableEnd="@drawable/ic_password"
                    android:drawableRight="@drawable/ic_password"
                    android:hint="@string/password_again"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_gray_main" />

                <View
                    android:id="@+id/v_password_hider2"
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_alignRight="@id/password_again"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:visibility="gone" />
            </RelativeLayout>


            <Button
                android:id="@+id/button_registration"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/red_button_selector"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>